--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
   
 
     </div>
+
+    <div class="padre">
+        
+        <div class="hijo hijo1">VFXCCFGBDFGDFDF</div> 
+        <div class="hijo hijo2">FGFDG</div>
+        <div class="hijo hijo3">BVFXGXGB</div>
+        <div class="hijo hijo4"></div>      
+  
+
+    </div>
     
 </body>
 </html>
